2004-12-08  Daniel Neri  <daniel.neri@sigicom.se>

	* cdl/stdio.cdl (CYGPKG_LIBC_STDIO_FILEIO): The FILEIO variant of
	vsnprintf breaks if CYGSEM_LIBC_STDIO_DYNAMIC_SETVBUF is disabled.
	
2004-09-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/stdio.cdl (CYGFUN_LIBC_STDIO_OPEN_POSIX_FDFUNCS): New option,
	to control whether or not fdopen()/fileno() are implemented.
	Only build fopen/fclose if CYGPKG_LIBC_STDIO_OPEN.

	* src/common/fclose.cxx: Can remove ifdef CYGPKG_LIBC_STDIO_OPEN since
	file now isn't even built if not.
	* src/common/fopen.cxx: Ditto. Also condition on
	CYGFUN_LIBC_STDIO_OPEN_POSIX_FDFUNCS so decision is centralised in CDL.

2004-08-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/stdio.cdl (CYGDAT_LIBC_STDIO_DEFAULT_CONSOLE): Only use
	CYGDAT_IO_SERIAL_TTY_CONSOLE if set.

2004-08-18  Fredrik Hederstierna  <fredrik@wespot.com>
2004-08-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/input/vfscanf.cxx (vfscanf): Add long long and long double
	support.
	* cdl/stdio.cdl (CYGFUN_LIBC_STDIO_LONGLONG): Make it a new option.

2004-08-16  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/common/stream.cxx (read): fixed performance problem with
	unbuffered reads. Long unbuffered i/o read requests would cause
	one roundtrip to the underlying file system for each byte, instead
	of a single trip as intended.

2004-03-29  Kelvin Lawson <klawson@ad-holdings.co.uk>

	* src/common/fopen.cxx:
	* src/common/stream.cxx:
	* include/io.inl:
	* include/stream.hxx:
	Split CYGSTREAM_READWRITE into CYGSTREAM_READWRITE_CREATE and
	CYGSTREAM_READWRITE_NOCREATE. This fixes fopen() with mode 'w+'
	which previously did not allow file creation.

2004-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/stream.inl (set_position): Flush the output buffer
	before seeking the underlying file otherwise the writes ends up in
	the wrong location in the file.
	
2004-03-15  Jonathan Larmour  <jifl@eCosCentric.com>
